增加标志字符requestSource来判断请求是否来自SDK
